[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "drf_pyjwt"
author = "Vicheslav Krachkov"
author-email = "vskrachkov@gmail.com"
home-page = "https://github.com/vskrachkov/drf_pyjwt"
requires = [
    "pyjwt<3",
    "django>=3.1",
    "djangorestframework>=3.10",
    "cryptography<4",
]
requires-python = ">=3.9"
description-file="README.md"